work on modularizing